# PretrainHub

./: README.md  install.sh  pyproject.toml
playground/: online_sgd.py  regression.py  utils.py  wy_fast.py
recipes/deepspeed/: zero3.json  zero3_for_loading.json
recipes/runs/: 1.5B.yaml  330m-muon.yaml  330m.yaml  700m.yaml  debug.yaml  debug_muon.yaml  llama3.2-1B.yaml
scripts/: 1.5B-4nodes.sh  1.5B.sh  330m.sh  330m_muon.sh  700m.sh  debug.sh  debug_muon.sh  llama3.2-1b.sh
src/: push_to_hub.py  simple_embed.py  tokenization.py  train.py
src/optimizers/: muon.py
